customized styles and moved all styles to styles.css

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,36 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide-Scanner Search</title>
-    <style>
-        /* Your existing styles */
-        #searchButton {
-            display: block;
-            width: 5%;
-            padding: 5px;
-            font-size: 16px;
-            margin-top: 12px;
-            font-family: Arial;
-        }
-        #searchingText {
-            display: none;
-            width: 5%;
-            padding: 5px;
-            font-size: 16px;
-            margin-top: 12px;
-            background-color: lightgray;
-            color: black;
-            border: darkgray;
-            border-radius: 4px;
-            cursor: not-allowed;
-            text-align: left;
-            font-family: Arial;
-        }
-        #searchQuery {
-            width: 30%;
-            padding: 5px;
-            font-size: 16px;
-        }
-    </style>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <h2>Guide-Scanner Search</h2>
