Style improvements and some cleanup

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide-Scanner Search</title>
-    <link rel="stylesheet" href="static/styles.css">
+    <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="static/custom_styles.css">
 </head>
 <body>
     <h2>Guide-Scanner Search</h2>
+    <h3> Ask me about Jedi Survivor </h3>
     <form id="searchForm">
-        <input type="text" id="searchQuery" name="query" required>
+        <input type="text" id="searchQuery" name="query" required> 
         <button type="submit" id="searchButton">Search</button>
         <button id="searchingText" disabled>Searching<span id="dots">.</span></button>
     </form>
@@ -17,7 +19,7 @@
     <ul id="resultsList">
         <!-- Results will be inserted here -->
     </ul>
-
+    <p> </p>
     <script src="static/scripts.js"></script>
 </body>
 </html>
