--- a/src/app/templates/static/custom_styles.css
+++ b/src/app/templates/static/custom_styles.css
@@ -1,6 +1,6 @@
 /* custom_styles.css */
 .paragraph-style {
-    width: 60%; /* Adjust the width as needed */
+    width: 40%; /* Adjust the width as needed */
     margin: 0 auto; /* Center the paragraph */
     margin-top: 0px;
     margin-left: 0;
@@ -10,6 +10,17 @@
     word-wrap: break-word; /* Ensure long words are wrapped */
     text-align: left;
 }
+#searchForm {
+    font-size: 16px;  
+}
+#searchQuery {
+    width: 100%;
+    height: 1.5em;
+    vertical-align: top; /* Align text to the top */
+    text-align: left; /* Align text to the left */
+    padding: 5px;
+    font-size: 16px;  
+}
 #searchButton {
     display: block;
     width: 5%;
@@ -17,13 +28,6 @@
     font-size: 16px;
     margin-top: 12px;
     font-family: Arial;
-}
-#searchQuery {
-    resize: both !important; 
-    overflow: auto !important;
-    width: 30%;
-    padding: 5px !important;
-    font-size: 16px !important;  
 }
 #searchingText {
     display: none;
@@ -39,4 +43,17 @@
     text-align: left;
     font-family: Arial;
 }
+/* Adjust width for larger screens */
+@media (min-width: 600px) {
+    #searchQuery {
+        width: 10%; /* Adjust as needed for tablets */
+        resize: horizontal;
+    }
+}
 
+@media (min-width: 1024px) {
+    #searchQuery {
+        width: 35%; /* Adjust as needed for desktops */
+        resize: horizontal;
+    }
+}
