Made it a little prettier and more stable. Also updated the README.MD

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -8,24 +8,23 @@
     <link rel="stylesheet" href="static/custom_styles.css">
 </head>
 <body>
-    <h2>Guide-Scanner Search</h2>
-    <h3> Ask me about one of the games I know! </h3>
+    <h2 id="title">Guide-Scanner Search</h2>
+    <h3 id="subheader3"> Ask me about one of the games I know! </h3>
     <form id="searchForm" action="/search" method="post">
         <!-- Dropdown menu for additional options -->
         <label for="game">Choose a game:</label>
         <select id="game" name="game">
             <option value="JediSurvivor">Jedi Survivor</option>
+            <option value="BO6">Call of Duty: Black Ops 6</option>
             <option value="BG3">Baldur's Gate 3</option>
             <option value="Mafia">Mafia</option>
         </select>  <br><br>
     
-        <input id="searchQuery" name="query" class="searchQuery" required></input>
-        <!-- <textarea id="searchQuery" name="query" rows="1" class="searchQuery" required></textarea> -->
-      
+        <input id="searchQuery" name="query" class="searchQuery" required></input>     
         <button type="submit" id="searchButton">Search</button>
         <button id="searchingText" disabled>Searching<span id="dots">.</span></button>
     </form>
-    <h2>Search Results</h2>
+    <h2 id="subheader3">Search Results</h2>
     <ul id="resultsList">
         <!-- Results will be inserted here -->
     </ul>
