--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="overlay-container">
         <h2 id="title">Guide-Scanner Search</h2>
-        <h3 id="subheader3"> Ask me about one of the games I know! </h3>
+        <span id="subheader3"> Ask me about one of the games I know! </span>
         <form id="searchForm" action="/search" method="post">
             <!-- Dropdown menu for additional options -->
-            <label for="game">Choose a game:</label>
+            <label for="game"><span class="subheader3">Choose a game:</span></label>
             <select id="game" name="game">
                 <option value="JediSurvivor">Jedi Survivor</option>
                 <option value="BO6">Call of Duty: Black Ops 6</option>
@@ -25,10 +25,11 @@
             <input id="searchQuery" name="query" class="searchQuery" required></input>     
             <button type="submit" id="searchButton">Search</button>
             <button id="searchingText" disabled>Searching<span id="dots">.</span></button>
+            <h3 id="subheader4"> To learn more about this project, visit my <a href="https://github.com/DShaience/guidescanner">github</a>.</h3>
         </form>
         <h2 id="subheader3">Search Results</h2>
         <ul id="resultsList">
-            <!-- Results will be inserted here -->
+                <!-- Results will be inserted here -->
         </ul>
     </div>
     <script src="static/scripts.js"></script>
