--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -14,7 +14,8 @@
         <span id="subheader3"> Ask me about one of the games I know! </span>
         <form id="searchForm" action="/search" method="post">
             <!-- Dropdown menu for additional options -->
-            <label for="game"><span class="subheader3">Choose a game:</span></label>
+            <!-- <label for="game"><span class="subheader3">Choose a game:</span></label> -->
+            <label for="game"> </label>
             <select id="game" name="game">
                 <option value="JediSurvivor">Jedi Survivor</option>
                 <option value="BO6">Call of Duty: Black Ops 6</option>
@@ -27,7 +28,7 @@
             <button id="searchingText" disabled>Searching<span id="dots">.</span></button>
             <h3 id="subheader4"> To learn more about this project, visit my <a href="https://github.com/DShaience/guidescanner">github</a>.</h3>
         </form>
-        <h2 id="subheader3">Search Results</h2>
+        <h2 id="searchResultsHeader" style="display: none;">Search Results</h2>
         <ul id="resultsList">
                 <!-- Results will be inserted here -->
         </ul>
